Update index.html for animation

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 </head>
 <body> 
     <header class="header">
-        <a href="#" class="logo"><span style="color:#00abf0;">K</span>arni Singh
-</a>
-        <div class="bx bx-menu" id="menu-icon"></div>
+        <a href="#" class="logo"><span style="color:#00abf0;">K</span>arni Singh<span class="animate" style="--i:1;"></span></a>
+        <div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i:2;"></span></div>
 
         <nav class="navbar">
             <a href="#home" class="active">home</a>
@@ -20,20 +19,26 @@
             <a href="#education">education</a>
             <a href="#skills">skills</a>
             <a href="#contact">contact</a>
+
+            <span class="active-nav"></span>
+            <span class="animate" style="--i:2;"></span>
         </nav>
     </header>
 
     <!-- home section -->
-    <section class="home" id="home">
+    <section class="home show-animate" id="home">
         <div class="home-content">
-            <h1>Hi, I'm <span>karni singh</span></h1>
+            <h1>Hi, I'm <span>karni singh</span> <span class="animate" style="--i:2;"></span></h1>
             <div class="text-animate">
                 <h3>Frontend Developer</h3>
+                 <span class="animate" style="--i:3;"></span>
             </div>
-            <p>"I am a passionate frontend and Android developer eager to build modern, responsive, and user-friendly digital experiences. With a foundation in full-stack web development and hands-on experience in Android app creation, I love turning ideas into functional, visually appealing projects. I am continuously learning new technologies to grow as a versatile developer."</p>
+            <p>"I am a passionate frontend and Android developer eager to build modern, responsive, and user-friendly digital experiences. With a foundation in full-stack web development and hands-on experience in Android app creation, I love turning ideas into functional, visually appealing projects.I am continuously learning new technologies to grow as a versatile developer."<span class="animate" style="--i:13;"></span></p>
+               
             <div class="btn-box"> 
                 <a href="#" class="btn">Hire Me</a>
                 <a href="#" class="btn">Let's Talk</a>
+                <span class="animate" style="--i:5;"></span>
             </div>
         </div>
 
@@ -41,35 +46,42 @@
             <a href="#"><i class='bx bxl-facebook'></i></a>
             <a href="#"><i class='bx bxl-twitter'></i></a>
             <a href="#"><i class='bx bxl-linkedin'></i></a>
+             <span class="animate" style="--i:6;"></span>
         </div>
         <div class="home-imgHover"></div>
+         <span class="animate home-img" style="--i:7;"></span>
     </section>
 
     <!-- about section -->
     <section class="about" id="about">
-        <h2 class="heading">About <span>Me</span></h2>
+        <h2 class="heading">About <span>Me</span> <span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="about-img">
             <img src="./profile1.jpg" alt="Profile Image">
             <span class="circle-spin"></span>
+            <span class="animate scroll" style="--i:2;"></span>
         </div>
 
         <div class="about-content">
-            <h3>Frontend Developer</h3>
-            <p>I am a passionate Frontend & Android Developer with a strong focus on building responsive, user-friendly, and visually appealing websites and apps. I enjoy turning ideas into clean, functional code and continuously learning new technologies to improve my craft.</p>
+            <h3>Frontend Developer!<span class="animate scroll" style="--i:3;"></span></h3>
+            <p>I am a passionate Frontend & Android Developer with a strong focus on building responsive, user-friendly,
+                 and visually appealing websites and apps. I enjoy turning ideas into clean, 
+                 functional code and continuously learning new technologies to improve my craft.<span class="animate scroll" style
+                 ="--i:4;"></span></p>
             <div class="btn-box btns"> 
                 <a href="#" class="btn">Read More</a>
+                <span class="animate scroll" style="--i:5;"></span>
             </div>
         </div>
     </section>
 
     <!-- education section -->
     <section class="education" id="education">
-        <h2 class="heading">My <span>Journey!</span></h2>
+        <h2 class="heading">My <span>Journey!</span><span class="animate scroll" style="--i:1;"></span></h2>
         <div class="education-row">
             <!-- Education Column -->
             <div class="education-coloumn">
-                <h3 class="title">Education</h3>
+                <h3 class="title">Education<span class="animate scroll" style="--i:2;"></span></h3>
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
@@ -94,12 +106,13 @@
                             <p>Focused on core subjects, building analytical and problem-solving skills essential for higher education.</p>
                         </div>
                     </div>
+                    <span class="animate scroll" style="--i:3;"></span>
                 </div>
             </div>
 
             <!-- Experience Column -->
             <div class="education-coloumn">
-                <h3 class="title">Experience</h3>
+                <h3 class="title">Experience<span class="animate scroll" style="--i:4;"></span></h3>
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
@@ -124,6 +137,7 @@
                             <p>Participated in an intensive workshop exploring cutting-edge AI tools, automation techniques, and real-world applications.</p>
                         </div>
                     </div>
+                    <span class="animate scroll" style="--i:5;"></span>
                 </div>
             </div>
         </div>
@@ -131,10 +145,10 @@
 
     <!-- skill section design -->
 <section class="skills" id="skills">
-    <h2 class="heading">My <span>Skills!</span></h2>
+    <h2 class="heading">My <span>Skills!</span> <span class="animate scroll" style="--i:1;"></span></h2>
     <div class="skills-row">
         <div class="skills-coloumn">
-            <h3 class="title">Coding Skills</h3>
+            <h3 class="title">Coding Skills</span> <span class="animate scroll" style="--i:2;"></span></h3>
             <div class="skills-box">
                 <div class="skills-content">
                     <div class="progress">
@@ -154,11 +168,12 @@
                         <div class="bar"><span></span></div>
                     </div>
                 </div>
+                 <span class="animate scroll" style="--i:3;"></span>
             </div>
         </div>
 
  <div class="skills-coloumn">
-            <h3 class="title">Professional Skills</h3>
+            <h3 class="title">Professional Skills<span class="animate scroll" style="--i:4;"></span></h3>
             <div class="skills-box">
                 <div class="skills-content">
                     <div class="progress">
@@ -178,6 +193,7 @@
                         <div class="bar"><span></span></div>
                     </div>
                 </div>
+             <span class="animate scroll" style="--i:5;"></span>
             </div>
         </div>
 
@@ -187,7 +203,7 @@
 <!-- contact section design -->
 
 <section class="contact" id="contact">
-    <h2 class="heading">Contact <span>Me!</span></h2>
+    <h2 class="heading">Contact <span>Me!</span><span class="animate scroll" style="--i:1;"></span></h2>
     <form action="#">
         <div class="input-box">
             <div class="input-field">
@@ -198,6 +214,7 @@
                 <input type="text" placeholder=" E-Mail Adderess" required>
                 <span class="focus"></span>
              </div>
+             <span class="animate scroll" style="--i:3;"></span>
 
         </div>
 
@@ -205,19 +222,24 @@
             <div class="input-field">
                 <input type="number" placeholder=" Moble Number" required>
                 <span class="focus"></span>
+
+                <span class="animate scroll" style="--i:5;"></span>
              </div>
  <div class="input-field">
                 <input type="text" placeholder=" E-Mail Subject" required>
                 <span class="focus"></span>
+                <span class="animate scroll" style="--i:6;"></span>
              </div>
         </div>
 
         <div class="textarea-field">
             <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
             <span class="focus"></span>
+            <span class="animate scroll" style="--i:7;"></span>
         </div>
         <div class="btn-box btns">
             <button type="submit" class="btn">Submit</button>
+            <span class="animate scroll" style="--i:9;"></span>
         </div>
     </form>
     </section>
@@ -227,11 +249,14 @@
     <footer class="footer">
         <div class="footer-text">
             <p>copyright &copy; 2025 by karni singh | All Right Reserved.</p>
+            <span class="animate scroll" style="--i:1;"></span>
         </div>
         <div class="footer-iconTop">
             <a href="#"><i class='bx bx-up-arrow-alt'></i> </a>
+            <span class="animate scroll" style="--i:3;"></span>
         </div>
     </footer>
+    <script src="script.js"></script>
 
 </body>
 </html>
