Update index.html spelling mistakes

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         <div class="bar"><span></span></div>
                     </div>
                      <div class="progress">
-                        <h3>We Development <span>67%</span></h3>
+                        <h3>Web Development <span>67%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                      <div class="progress">
@@ -189,7 +189,7 @@
                         <div class="bar"><span></span></div>
                     </div>
                      <div class="progress">
-                        <h3>CEO Marketing <span>60%</span></h3>
+                        <h3>App Development <span>60%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                 </div>
@@ -260,3 +260,4 @@
 
 </body>
 </html>
+
