--- a/index.html
+++ b/index.html
@@ -204,44 +204,44 @@
 
 <section class="contact" id="contact">
     <h2 class="heading">Contact <span>Me!</span><span class="animate scroll" style="--i:1;"></span></h2>
-    <form action="#">
-        <div class="input-box">
-            <div class="input-field">
-                <input type="text" placeholder=" Full Name" required>
-                <span class="focus"></span>
-             </div>
- <div class="input-field">
-                <input type="text" placeholder=" E-Mail Adderess" required>
-                <span class="focus"></span>
-             </div>
-             <span class="animate scroll" style="--i:3;"></span>
-
-        </div>
-
-          <div class="input-box">
-            <div class="input-field">
-                <input type="number" placeholder=" Moble Number" required>
-                <span class="focus"></span>
-
-                <span class="animate scroll" style="--i:5;"></span>
-             </div>
- <div class="input-field">
-                <input type="text" placeholder=" E-Mail Subject" required>
-                <span class="focus"></span>
-                <span class="animate scroll" style="--i:6;"></span>
-             </div>
-        </div>
-
-        <div class="textarea-field">
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+   <form action="https://formspree.io/f/mpwjbnnv" method="POST">
+    <div class="input-box">
+        <div class="input-field">
+            <input type="text" name="name" placeholder="Full Name" required>
             <span class="focus"></span>
-            <span class="animate scroll" style="--i:7;"></span>
         </div>
-        <div class="btn-box btns">
-            <button type="submit" class="btn">Submit</button>
-            <span class="animate scroll" style="--i:9;"></span>
+        <div class="input-field">
+            <input type="email" name="email" placeholder="E-Mail Address" required>
+            <span class="focus"></span>
         </div>
-    </form>
+        <span class="animate scroll" style="--i:3;"></span>
+    </div>
+
+    <div class="input-box">
+        <div class="input-field">
+            <input type="tel" name="phone" placeholder="Mobile Number" required>
+            <span class="focus"></span>
+            <span class="animate scroll" style="--i:5;"></span>
+        </div>
+        <div class="input-field">
+            <input type="text" name="subject" placeholder="E-Mail Subject" required>
+            <span class="focus"></span>
+            <span class="animate scroll" style="--i:6;"></span>
+        </div>
+    </div>
+
+    <div class="textarea-field">
+        <textarea name="message" cols="30" rows="10" placeholder="Your Message" required></textarea>
+        <span class="focus"></span>
+        <span class="animate scroll" style="--i:7;"></span>
+    </div>
+
+    <div class="btn-box btns">
+        <button type="submit" class="btn">Submit</button>
+        <span class="animate scroll" style="--i:9;"></span>
+    </div>
+</form>
+
     </section>
 
     <!-- footer design -->
@@ -260,4 +260,5 @@
 
 </body>
 </html>
+
 
