--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
             <p>"I am a passionate frontend and Android developer eager to build modern, responsive, and user-friendly digital experiences. With a foundation in full-stack web development and hands-on experience in Android app creation, I love turning ideas into functional, visually appealing projects.I am continuously learning new technologies to grow as a versatile developer."<span class="animate" style="--i:13;"></span></p>
                
             <div class="btn-box"> 
-                <a href="#" class="btn">Hire Me</a>
-                <a href="#" class="btn">Let's Talk</a>
+                <a href="#contact" class="btn">Hire Me</a>
+                <a href="#contact" class="btn">Let's Talk</a>
                 <span class="animate" style="--i:5;"></span>
             </div>
         </div>
 
         <div class="home-sci">
-            <a href="#"><i class='bx bxl-facebook'></i></a>
-            <a href="#"><i class='bx bxl-twitter'></i></a>
-            <a href="#"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://www.instagram.com/karni_.singh_.shekhawat/"><i class='bx bxl-instagram'></i></a>
+            <a href="https://github.com/karnisingh61/"><i class='bx bxl-github'></i></a>
+            <a href="https://www.linkedin.com/in/karni-singh-shekhawat/"><i class='bx bxl-linkedin'></i></a>
              <span class="animate" style="--i:6;"></span>
         </div>
         <div class="home-imgHover"></div>
@@ -64,12 +64,16 @@
 
         <div class="about-content">
             <h3>Frontend Developer!<span class="animate scroll" style="--i:3;"></span></h3>
-            <p>I am a passionate Frontend & Android Developer with a strong focus on building responsive, user-friendly,
-                 and visually appealing websites and apps. I enjoy turning ideas into clean, 
-                 functional code and continuously learning new technologies to improve my craft.<span class="animate scroll" style
+            <p>I am a passionate Frontend and Android Developer with a strong drive to create modern, responsive, and user-friendly digital experiences. With expertise in HTML, CSS, JavaScript, React.js, and Android (Java/Kotlin), I enjoy transforming ideas into visually appealing interfaces and functional applications that provide real value to users.
+
+On the frontend side, I focus on building clean, scalable, and accessible websites with attention to detail in UI/UX design, performance optimization, and cross-platform compatibility. On the Android side, I specialize in crafting apps that are not only efficient but also intuitive, leveraging features like local storage, API integration, Firebase, and notifications.
+
+I am deeply motivated by continuous learning and staying updated with the latest industry trends and technologies. I love solving problems, experimenting with new tools, and pushing myself to build better, faster, and smarter solutions.
+
+Beyond coding, I believe in writing maintainable, well-documented code and collaborating effectively with teams to bring projects from concept to deployment. My long-term goal is to grow as a full-stack developer and contribute to impactful products that make a difference.<span class="animate scroll" style
                  ="--i:4;"></span></p>
             <div class="btn-box btns"> 
-                <a href="#" class="btn">Read More</a>
+                <a href="#" class="btn"> My-Resume!</a>
                 <span class="animate scroll" style="--i:5;"></span>
             </div>
         </div>
@@ -260,5 +264,6 @@
 
 </body>
 </html>
+
 
 
